--- a/css/utility.css
+++ b/css/utility.css
@@ -38,3 +38,14 @@
     background-color: #f4f4f4;
     color: #333;
 }
+
+.btn-outline {
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+}
+
+.bg-dark {
+    background: #333;
+    color: #fff;
+}
