--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,9 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     height: 100%;
+    width: 100%;
     padding: 0 20px;
 }
 
@@ -111,6 +113,11 @@ img {
     z-index: 10;
 }
 
+.hero.blog {
+    background: url("../img/home/blog.jpg") no-repeat center center/cover;
+    height: 30vh;
+}
+
 /*  Middle Section  */
 
 .middle-section {
@@ -122,7 +129,6 @@ img {
 }
 
 .middle-section .box {
-    /* text-align: center; */
     padding: 50px 20px;
 }
 
@@ -147,8 +153,8 @@ img {
 
 .info .info-img {
     background: url("../img/home/people.jpg") no-repeat center center/cover;
+    min-height: 300px;
     width: 50%;
-    height: 100%;
 }
 
 .info-content {
@@ -191,6 +197,7 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     padding: 30px;
 }
 
@@ -233,7 +240,7 @@ img {
 
 .blog .blog-img {
     background: url("../img/home/blog.jpg") no-repeat center center/cover;
-    height: 100%;
+    min-height: 200px;
     width: 50%;
 }
 
@@ -293,13 +300,18 @@ img {
 
 /*  Contact */
 
+.contact {
+    display: flex;
+    height: 600px;
+}
 
-#contact .contact-img {
+.contact .contact-img {
     background: url("../img/home/contact.jpg") no-repeat center center/cover;
+    min-height: 300px;
     width: 50%;
 }
 
-#contact .contact-content {
+.contact .contact-content {
     background: #f4f4f4;
     display: flex;
     flex-direction: column;
@@ -309,13 +321,13 @@ img {
     padding: 20px;
 }
 
-#contact .contact-content h1 {
+.contact .contact-content h1 {
     font-weight: 400;
     font-size: 40px;
     margin-bottom: 15px;
 }
 
-#contact .contact-content input {
+.contact .contact-content input {
     width: 100%;
     margin: 5px 0;
     padding: 10px;
@@ -323,7 +335,7 @@ img {
     border-radius: 5px;
 }
 
-#contact .contact-content a {
+.contact .contact-content a {
     width: 100%;
     padding: 5px 20px;
     background-color: #28a745;
@@ -333,7 +345,11 @@ img {
     margin-top: 15px;
 }
 
-#contact .contact-content input:focus {
+.contact .contact-content a:hover {
+    background-color: #333;
+}
+
+.contact .contact-content input:focus {
     outline-color: #28a745;
 }
 
@@ -344,7 +360,7 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 100px;
+    padding: 50px;
 }
 
 .footer .social {
@@ -353,10 +369,97 @@ img {
 
 .footer .social p {
     margin: 0;
-    font-size: 36px;
+    font-size: 28px;
 }
 
 .footer .social i{
     color: #fff;
     padding: 10px 20px 30px;
+}
+
+.footer .social i:hover {
+    border-bottom: 2px #28a745 solid;
+}
+
+/* Mobile  */
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        height: 120px;
+        padding: 20px;
+    }
+
+    .navbar a {
+        padding: 10px 10px;
+        margin: 0 3px;
+    }
+
+    .middle-section, .info, .team-row, .contact {
+        flex-direction: column;
+    }
+
+    .blog {
+        flex-direction: column-reverse;
+        margin-top: 50px;
+    }
+
+    .info .info-img, 
+    .info .info-content, 
+    .blog .blog-img,  
+    .blog .blog-content,
+    .contact .contact-img,
+    .contact .contact-content{
+        width: 100%;
+    }
+
+
+    .flex-grid .column {
+        flex: 50%;
+        max-width: 50%;
+        padding: 0 2px;
+    }
+
+    
+}
+
+/*  Blog Page  */
+
+.blog-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    height: 100%;
+    width: 50%;
+    padding: 20px;
+}
+
+.blog-content a {
+    padding: 10px 20px;
+    margin-top: 15px;
+    border-radius: 5px;
+}
+
+.blog-img {
+    min-height: 300px;
+    width: 50%;
+}
+.blog-img img {
+    width: 100%;
+    height: 100%;
+}
+
+/* Post */
+
+.post {
+    padding: 50px 20px;
+}
+
+.post img {
+    display: block;
+    margin: 0 auto 30px;
+    width: 350px;
+    height: 270px;
+    border-radius: 50%;
 }
