--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ img {
     position: fixed;
     top: 0px;
     padding: 0 30px;
+    transition: 1s;
+}
+
+.navbar.top {
+    background: transparent;
 }
 
 .navbar a {
